projects/migrate-from-aws-to-google-cloud/eks-to-gke-proxy-migration/k8s/migration/proxy-deployment.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-proxy
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-proxy
  template:
    metadata:
      labels:
        app: eks-proxy
    spec:
      containers:
        - name: eks-proxy
          image: nginx:1.29-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: nginx-config
          configMap:
            name: eks-proxy-config
