projects/migrate-from-aws-to-google-cloud/eks-to-gke-proxy-migration/k8s/migration/httproute.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-demo-httproute
  namespace: app
spec:
  parentRefs:
    - name: proxy-demo-gateway
  hostnames:
    - "proxy-demo.test"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: eks-proxy
          port: 80
          weight: 100
        - name: proxy-demo
          port: 80
          weight: 0
